Fix coderabbit comments

--- a/gateway/it/docker-compose.test.postgres.yaml
+++ b/gateway/it/docker-compose.test.postgres.yaml
@@ -265,7 +265,7 @@ services:
     ports:
       - "9082:8080"
     networks:
-      - it-gateway-network
+      - it-gateway-runtime-network
 
 volumes:
   controller-data-tests:
@@ -273,6 +273,4 @@ volumes:
 
 networks:
   it-gateway-runtime-network:
-    driver: bridge
-  it-gateway-network:
     driver: bridge
