--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -41,7 +41,7 @@
                 "-manifest", "${workspaceFolder}/gateway/build.yaml",
                 // "-manifest", "${workspaceFolder}/gateway/sample-policies/build.yaml",
                 "-system-manifest-lock", "${workspaceFolder}/gateway/system-policies/system-policy-manifest-lock.yaml",
-                "-policy-engine-src", "${workspaceFolder}/gateway/policy-engine",
+                "-policy-engine-src", "${workspaceFolder}/gateway/gateway-runtime/policy-engine",
                 "-out-dir", "${workspaceFolder}/gateway/gateway-builder/target/output",
                 "-log-level", "debug",
             ],
@@ -51,7 +51,7 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}/gateway/policy-engine/cmd/policy-engine",
+            "program": "${workspaceFolder}/gateway/gateway-runtime/policy-engine/cmd/policy-engine",
             "args": [
                 "-config", "${workspaceFolder}/gateway/configs/config.toml" ,
                 "-xds-server", "localhost:18001",
@@ -63,10 +63,10 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}/gateway/policy-engine/cmd/policy-engine",
+            "program": "${workspaceFolder}/gateway/gateway-runtime/policy-engine/cmd/policy-engine",
             "args": [
                 "-config", "${workspaceFolder}/gateway/configs/config.toml",
-                "-policy-chains-file", "${workspaceFolder}/gateway/policy-engine/configs/policy-chains.yaml",
+                "-policy-chains-file", "${workspaceFolder}/gateway/gateway-runtime/policy-engine/configs/policy-chains.yaml",
             ],
         },
     ]
